--- a/ChangeDimension.xaml
+++ b/ChangeDimension.xaml
@@ -22,6 +22,9 @@
         </Style>
 
         <Style x:Key="ErrorTextBoxStyle" TargetType="TextBox">
+
+            <Setter Property="Margin" Value="0,8,0,0" />
+
             <Setter Property="Validation.ErrorTemplate">
                 <Setter.Value>
                     <ControlTemplate>
